# spin-wasm-component-demo

./: README.md  spin-wasm-component-demo.code-workspace
auth/: Cargo.toml
auth/src/: bindings.rs  lib.rs
auth/wit/: world.wit
spin-app/: compose-middleware.sh  spin.toml
spin-app/rust-api/: Cargo.toml
spin-app/rust-api/src/: lib.rs
